feat(posts): update content and color schemes for new css variable

--- a/_app/_posts/work/drawing/2006-07-31-ka-boom.md
+++ b/_app/_posts/work/drawing/2006-07-31-ka-boom.md
@@ -4,9 +4,13 @@ title: Ka-boom
 category: work
 tag: drawing
 plugin: lightense
-scheme-text: "#fff"
-scheme-link: "#fff"
-scheme-bg: "#050505"
+css: |
+  :root {
+    --text-color-l: 100%;
+    --link-color-l: 70%;
+    --bg-color-s: 0%;
+    --bg-color-l: 5%;
+  }
 ---
 
 Can I help you?
