--- a/_app/_posts/work/drawing/2006-10-11-mobscene.md
+++ b/_app/_posts/work/drawing/2006-10-11-mobscene.md
@@ -4,9 +4,17 @@ title: Mobscene
 category: work
 tag: drawing
 plugin: lightense
-scheme-text: "#f3ab00"
-scheme-link: "#fff"
-scheme-bg: "#000"
+css: |
+  :root {
+    --text-color-h: 45;
+    --text-color-s: 100%;
+    --text-color-l: 60%;
+    --link-color-h: 45;
+    --link-color-l: 100%;
+    --bg-color-h: 45;
+    --bg-color-s: 0%;
+    --bg-color-l: 5%;
+  }
 ---
 
 Mobscene on a bus. Full of mocking students.
