--- a/_app/_posts/work/drawing/2007-10-06-rx-rts.md
+++ b/_app/_posts/work/drawing/2007-10-06-rx-rts.md
@@ -5,11 +5,15 @@ category: work
 tag: drawing
 excerpt: No description
 thumbnail: thumb/rx-rts.jpg
-scheme-text: "#fff"
-scheme-link: "#fff"
-scheme-hover: "#fff"
-scheme-bg: "#111"
 plugin: lightense
+css: |
+  :root {
+    --text-color-l: 100%;
+    --link-color-h: 30;
+    --link-color-l: 70%;
+    --bg-color-s: 0%;
+    --bg-color-l: 10%;
+  }
 ---
 
 <p><img src="{{ site.file }}/work/rx-rts_01.jpg" alt="RX R.T.S_01" data-background="rgba(0, 0, 0, .9)"></p>
