--- a/_app/_posts/work/graphic/2006-08-25-dry-heat.md
+++ b/_app/_posts/work/graphic/2006-08-25-dry-heat.md
@@ -4,10 +4,17 @@ title: Dry Heat
 category: work
 tag: graphic
 plugin: lightense
-scheme-text: "#3ff"
-scheme-link: "#fff"
-scheme-bg: "#000"
-scheme-hero-text: "#ff00ff"
+css: |
+  :root {
+    --text-color-h: 170;
+    --text-color-s: 100%;
+    --text-color-l: 60%;
+    --link-color-h: 170;
+    --link-color-l: 100%;
+    --bg-color-h: 170;
+    --bg-color-s: 0%;
+    --bg-color-l: 0%;
+  }
 ---
 
 It was an indescribable hot day that I created this fantasic image.
