--- a/_app/_posts/work/graphic/2006-08-03-admoniz.md
+++ b/_app/_posts/work/graphic/2006-08-03-admoniz.md
@@ -4,9 +4,17 @@ title: Admoniz
 category: work
 tag: graphic
 plugin: lightense
-scheme-text: "#ff34d3"
-scheme-link: "#fff"
-scheme-bg: "#25252e"
+css: |
+  :root {
+    --text-color-h: 300;
+    --text-color-s: 100%;
+    --text-color-l: 60%;
+    --link-color-h: 300;
+    --link-color-l: 100%;
+    --bg-color-h: 240;
+    --bg-color-s: 5%;
+    --bg-color-l: 4%;
+  }
 ---
 
 Admoniz - Project Preview, It's just a preview, I won't really work it out.
