--- a/_app/_posts/work/wordpress/2013-03-23-kai.md
+++ b/_app/_posts/work/wordpress/2013-03-23-kai.md
@@ -16,7 +16,7 @@ scheme-code: "#ffe000"
 scheme-bg: "#ff9610"
 ---
 
-<p>「改」Series (a.k.a. Kai), is a series of the missing child themes for WordPress default theme <a href="http://wordpress.org/extend/themes/twentytwelve">Twenty Twelve</a>, <a href="http://wordpress.org/extend/themes/twentyeleven">Twenty Eleven</a>, and <a href="http://wordpress.org/extend/themes/twentyten">Twenty Ten</a>. The suffix “Kai” of this series is inspired from Japanese anime <a href="http://www.toei-anim.co.jp/tv/dragon_kai/">ドラゴンボール改</a> (a.k.a. Dragon Ball Kai).</p>
+<p>「改」Series (a.k.a. Kai), is a series of the missing child themes for WordPress default theme <a href="https://wordpress.org/extend/themes/twentytwelve">Twenty Twelve</a>, <a href="https://wordpress.org/extend/themes/twentyeleven">Twenty Eleven</a>, and <a href="https://wordpress.org/extend/themes/twentyten">Twenty Ten</a>. The suffix “Kai” of this series is inspired from Japanese anime <a href="http://www.toei-anim.co.jp/tv/dragon_kai/">ドラゴンボール改</a> (a.k.a. Dragon Ball Kai).</p>
 
 <h2>Features</h2>
 <ul>
@@ -30,7 +30,7 @@ scheme-bg: "#ff9610"
 
 ## Downloads
 
-- [Kai 12]({{ site.file }}/download/kai-12.zip), ([source code](https://github.com/sparanoid/kai-12))
+- [Kai 12](https://wordpress.org/themes/kai-12/), ([source code](https://github.com/sparanoid/kai-12))
 - [Kai 11]({{ site.file }}/download/kai-11.zip), ([source code](https://github.com/sparanoid/kai-11))
 - [Kai 10]({{ site.file }}/download/kai-10.zip), ([source code](https://github.com/sparanoid/kai-10))
 
@@ -39,3 +39,5 @@ scheme-bg: "#ff9610"
 Q: “Why not submit these themes to WordPress.org official repository?”
 
 A: Their theme reviewer thinks my theme “just offer a few minor CSS tweaks and adds new footer credit links” [#](http://themes.trac.wordpress.org/ticket/10728).
+
+Update: After a [3-month long review](https://themes.trac.wordpress.org/ticket/61256), Kai 12 is now listed on official WordPress theme directory.
