--- a/_app/_posts/work/wordpress/2015-09-08-slimpack.md
+++ b/_app/_posts/work/wordpress/2015-09-08-slimpack.md
@@ -5,7 +5,7 @@ category: work
 tag: wordpress
 excerpt: Slimpack — Lightweight Jetpack. Super-fast performance without modules that require contracting WordPress.com.
 thumbnail: thumb/slimpack-thumb.png
-link: http://wordpress.org/plugins/slimpack/
+link: https://wordpress.org/plugins/slimpack/
 scheme-text: "#fff"
 scheme-link: "#ffdf00"
 scheme-hover: "#ffdf00"
@@ -37,6 +37,6 @@ It provides better performance than original Jetpack. All features that require 
 - Better performance than original Jetpack. All features that require a WordPress.com account have been removed. You don't need to connect to WordPress.com to use this plugin.
 - Multilingual support (and languages have already bundled in Slimpack!)
 
-<p class="download"><a href="http://wordpress.org/plugins/slimpack/">Download</a> it at WordPress.org</p>
+<p class="download"><a href="https://wordpress.org/plugins/slimpack/">Download</a> it at WordPress.org</p>
 
 Love this plugin? please consider [buying me a cup of coffee]({{ '/donate/' | relative_url }}).
