chore: fix broken links

--- a/_app/_posts/note/2013-01-26-ala-5.0.md
+++ b/_app/_posts/note/2013-01-26-ala-5.0.md
@@ -2,7 +2,7 @@
 layout: post
 title: A List Apart 5.0
 category: note
-link: http://alistapart.com/article/a-list-apart-relaunches-new-features-new-design
+link: https://alistapart.com/article/a-list-apart-relaunches-new-features-new-design/
 ---
 
 <blockquote>
