--- a/_app/_posts/work/commercial/2011-07-17-030buy-hiring.md
+++ b/_app/_posts/work/commercial/2011-07-17-030buy-hiring.md
@@ -22,4 +22,4 @@ plugin: lightense
 <h2>Webpage</h2>
 <p class="browser"><img src="{{ site.file }}/030buy-hiring.png"></p>
 
-<p>You can visit this page <a href="http://re.030buy.com/">here</a>.</p>
+<p>You can visit this page <a href="https://web.archive.org/web/20180615180444/http://re.030buy.com/">here</a>.</p>
