--- a/_app/_posts/work/commercial/2011-07-19-railgun.md
+++ b/_app/_posts/work/commercial/2011-07-19-railgun.md
@@ -7,7 +7,7 @@ excerpt: A Japanese ACG (Animations, Comics and Games) community
 thumbnail: thumb/railgun.jpg
 heading-img: railgun-logo.png
 heading-img-width: 400
-link: http://ra.gg/
+link: https://web.archive.org/web/20171114200039/http://ra.gg/
 scheme-text: "#c982b8"
 scheme-link: "#a50091"
 scheme-hover: "#84c4f5"
