--- a/_app/_posts/work/commercial/2013-08-07-itercast.md
+++ b/_app/_posts/work/commercial/2013-08-07-itercast.md
@@ -17,7 +17,7 @@ scheme-bg: "#ff5420"
 plugin: lightense
 ---
 
-<p><a href="http://itercast.com/">IterCast</a> (previous LinuxCast), An an online interactive education platform that offers coding courses in programming languages like Python, JavaScript, and Objective-C, database management courses such as MySQL and Oracle, Cisco Career certifications such as CCNA and CCNP Security, as well as markup languages such as HTML and CSS. All classes are free to everyone. I do design and front-end stuff for this project.</p>
+<p><a href="https://web.archive.org/web/20140207233511/http://itercast.com/">IterCast</a> (previous LinuxCast), An an online interactive education platform that offers coding courses in programming languages like Python, JavaScript, and Objective-C, database management courses such as MySQL and Oracle, Cisco Career certifications such as CCNA and CCNP Security, as well as markup languages such as HTML and CSS. All classes are free to everyone. I do design and front-end stuff for this project.</p>
 
 <p>Update: this project is now been discontinued, but you can see a cached site from my website.</p>
 
