--- a/_app/_posts/work/wordpress/2013-03-23-kai.md
+++ b/_app/_posts/work/wordpress/2013-03-23-kai.md
@@ -20,10 +20,10 @@ scheme-bg: "#ff9610"
 
 <h2>Features</h2>
 <ul>
-  <li>Written in <a href="http://lesscss.org/">Less</a>, no IE support</li>
+  <li>Written in <a href="https://sass-lang.com/">Sass</a> (Kai 12) and <a href="https://lesscss.org/">Less</a> (others), no IE support</li>
   <li>Better font stack for Chinese, Japanese and other asian languages</li>
   <li>Better code snippets style</li>
-  <li>Adds <code>.well</code> block inspired by <a href="http://getbootstrap.com/">Bootstrap</a></li>
+  <li>Adds <code>.well</code> block inspired by <a href="https://getbootstrap.com/">Bootstrap</a></li>
   <li>Fix media query issue</li>
   <li>Theme updater support</li>
 </ul>
@@ -38,6 +38,6 @@ scheme-bg: "#ff9610"
 
 Q: “Why not submit these themes to WordPress.org official repository?”
 
-A: Their theme reviewer thinks my theme “just offer a few minor CSS tweaks and adds new footer credit links” [#](http://themes.trac.wordpress.org/ticket/10728).
+A: Their theme reviewer thinks my theme “just offer a few minor CSS tweaks and adds new footer credit links” [#](https://themes.trac.wordpress.org/ticket/10728).
 
 Update: After a [3-month long review](https://themes.trac.wordpress.org/ticket/61256), Kai 12 is now listed on official WordPress theme directory.
