--- a/_app/_posts/work/commercial/2011-07-10-030buy.md
+++ b/_app/_posts/work/commercial/2011-07-10-030buy.md
@@ -4,7 +4,7 @@ title: Project 030Buy
 category: work
 tag: commercial
 excerpt: 030Buy online shopping site for a Japanese ACG (Animations, Comics and Games) community
-link: http://030buy.com/
+link: https://www.030buy.net/
 scheme-text: "#ff9518"
 scheme-link: "#785445"
 scheme-hover: "#ff9518"
