--- a/_app/_posts/work/commercial/2012-12-13-readwise.md
+++ b/_app/_posts/work/commercial/2012-12-13-readwise.md
@@ -11,7 +11,7 @@ scheme-code: "#39beb6"
 scheme-bg: "#4779ba"
 ---
 
-<p>As known as 「美味爱读」. An online reading web app by AVOS System, Inc. I do design and front-end stuff and teamed up with <a href="http://sunng.info/">Sun Ning</a> for this project.</p>
+<p>As known as 「美味爱读」. An online reading web app by AVOS System, Inc. I do design and front-end stuff and teamed up with <a href="https://sunng.info/">Sun Ning</a> for this project.</p>
 
 <p>An interesting thing I’d have to mention is sooner after we launched this project Google announced to close Google Reader on July 1.</p>
 
